--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,8 @@
 {
   "name": "message demo",
   "dependencies": {
-    "paper-toast": "PolymerElements/paper-toast#^1.3.0"
+    "paper-toast": "PolymerElements/paper-toast#^1.3.0",
+    "paper-material": "PolymerElements/paper-material#^1.0.6",
+    "paper-button": "PolymerElements/paper-button#^1.0.14"
   }
 }
