--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "paper-toast": "PolymerElements/paper-toast#^1.3.0",
     "paper-material": "PolymerElements/paper-material#^1.0.6",
-    "paper-button": "PolymerElements/paper-button#^1.0.14"
+    "paper-button": "PolymerElements/paper-button#^1.0.14",
+    "paper-styles": "PolymerElements/paper-styles#^1.1.5"
   }
 }
