--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~3.0.0",
     "@vaadin/angular2-polymer": "^1.0.0-beta5",
     "core-js": "^2.4.1",
+    "foundation-sites": "^6.2.4",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
@@ -39,6 +40,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.9",
+    "raw-loader": "^0.5.1",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
     "typescript": "2.0.2"
